Update github pages stuff

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://esperantulo.github.com
 title: Esperantulo
 subtitle: La blogo de ulo kiu lernas Esperanton
 author: Sergeo
