--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://esperantulo.github.com
 title: Esperantulo
 subtitle: La blogo de ulo kiu lernas Esperanton
-author: Sergeo
+author: Sergej Potapov
 simple_search: http://google.com/search
 description:
 
@@ -42,7 +42,7 @@ pagination_dir: blogo  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
-titlecase: true       # Converts page and post titles to titlecase
+titlecase: false       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
@@ -61,8 +61,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # Github repositories
 github_user:
 github_repo_count: 0
-github_show_profile_link: true
-github_skip_forks: true
+github_show_profile_link: false
+github_skip_forks: false
 
 # Twitter
 twitter_user:
@@ -87,10 +87,10 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name:
-disqus_show_comment_count: false
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: "UA-39745719-1"
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
