--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: true
+disqus_short_name: esperantulo
+disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id: "UA-39745719-1"
