--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: Esperantulo
 subtitle: La blogo de ulo kiu lernas Esperanton
 author: Sergej Potapov
 simple_search: http://google.com/search
+tapir_token: "515a01d93f61b05b20000060"
 description: La blogo de ulu kiu lernas Esperanton. Interesaj artikoloj pri vivo de junulo ja Esperanto movado.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
